# send-to-computer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  app.js  bootstrap-modules.js  bootstrap-styles.scss  build.js  docker-entrypoint.sh  global.d.ts  package-lock.json  package.json  production.js  tailwind.config.js  tsconfig.json  websocket.js
.github/workflows/: release.yml
frontend/: css.ts  main.ts  socket.ts
frontend/components/: create-group-modal.ts  header.ts  input.ts  message-list.ts  message-row.ts  sidebar.ts  tag-list.ts  toast.ts  welcome.ts
src/: development.js  listener.rs  main.rs  production.js  store.rs  websocket.js  websocket.rs
static/: app.webmanifest  bootstrap.esm.min.js  bootstrap.min.css  index.html  service-worker.js
