[package]
name = "send-to-computer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
env_logger = "0.11.3"
hyper = { version = "1.4.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.6", features = ["tokio", "server-auto", "http1"] }
log = "0.4.22"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.11", features = ["net"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs"] }
