[package]
name = "send-to-computer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
chrono = { version = "0.4.38", default-features = false, features = ["now", "std"] }
env_logger = "0.11.3"
futures-util = "0.3.30"
hyper = { version = "1.4.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.6", features = ["tokio", "server-auto", "http1"] }
log = "0.4.22"
redb = "2.1.1"
rmp-serde = "1.3.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.11", features = ["net"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs"] }
